--- a/svc-nascimento/application.yml
+++ b/svc-nascimento/application.yml
@@ -24,3 +24,13 @@ eureka:
     fetch-register: true
     register-with-eureka: true
     defaultZone: ${EUREKA_URL:http://localhost:8761/eureka}
+
+# Configurações Actuator
+management:
+  endpoints:
+    web:
+      base-path: /actuator
+  health:
+    binders:
+      enabled:
+        false
