--- a/svc-gateway/application.yml
+++ b/svc-gateway/application.yml
@@ -1,8 +1,38 @@
+server:
+  port: 7070
+
+# CONFIGURAÇÕES GATEWAY
 spring:
-  application:
-    name: SVC-GATEWAY
-  config:
-    import: configserver:${URL_CONFIG_SERVER:http://localhost:6060}
   cloud:
-    config:
-      profile: ${ACTIVE_PROFILE:default}
+    gateway:
+      actuator:
+        verbose:
+          enabled: true
+      metrics:
+        enabled: true
+    discovery:
+      enabled: true
+
+# CONFIGURAÇÕES EUREKA
+eureka:
+  client:
+    fetch-register: true
+    register-with-eureka: true
+    defaultZone: ${EUREKA_URL:http://localhost:8761/eureka}
+  serviceUrl:
+    defaultZone: ${EUREKA_URL:http://localhost:8761/eureka}
+  instance:
+    prefer-ip-address: true
+
+# CONFIGURAÇÕES ACTUATOR
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+          - '*'
+          - 'gateway'
+  endpoint:
+    gateway:
+      enabled:
+        true
